# OkPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/3D/: 3d.frag  3d.vert
app/src/main/assets/blend/: cube.frag
app/src/main/assets/framebuffer/: cube.frag  cube.vert  screen.frag  (+1 more)
app/src/main/cpp/: CMakeLists.txt  context_jni.cpp  native-lib.cpp  player_jni.cpp  render_jni.cpp  yuv_jni.cpp
app/src/main/cpp/glUtil/: GLUtil.cpp  GLUtil.h
app/src/main/cpp/jniHelper/: JniHelper.cpp  JniHelper.h
app/src/main/cpp/logUtil/: LogUtil.h
app/src/main/cpp/player/: AudioPlayer.cpp  AudioPlayer.h  BlockQueue.h  EglDisplay.cpp  EglDisplay.h  Player.cpp  Player.h  PlayerWrap.cpp  PlayerWrap.h  Queue.cpp  Queue.h  RealPlayer.cpp  RealPlayer.h  VideoShader.cpp  VideoShader.h
app/src/main/cpp/render/: BaseSample.cpp  BaseSample.h  Camera_m.h  CommonData.h  ComplexCubeSample.cpp  ComplexCubeSample.h  CubeSample.cpp  CubeSample.h  LightSample.cpp  LightSample.h  MaterialSample.h  MyGlRenderContext.cpp  MyGlRenderContext.h  ParallelLightSample.cpp  RenderType.h  RorateSample.cpp  RorateSample.h  Shader_m.h  SimpleLightSample.cpp  SimpleLightSample.h  TextureSample.cpp  TextureSample.h  TransformSample.cpp  TransformSample.h  TriangleSample.cpp  TriangleSample.h  UniformSample.cpp  UniformSample.h  VaoSample.cpp  VaoSample.h  YuvSample.cpp  YuvSample.h  mesh_m.h  model_m.h
app/src/main/cpp/render/advance/: BlendSample.cpp  BlendSample.h  FrameBufferSample.cpp  FrameBufferSample.h  SkyBoxSample.cpp  SkyBoxSample.h  StencilSample.cpp  StencilSample.h  UniformBufferSample.cpp  UniformBufferSample.h
app/src/main/cpp/render/base/: CubeSample.cpp  CubeSample.h  TextureSample.h  TriangleSample.h  TwoTextureSample.cpp  TwoTextureSample.h  UniformSample.cpp  UniformSample.h  VaoSample.cpp  VaoSample.h  YuvSample.cpp  YuvSample.h
app/src/main/cpp/render/light/: LightSample.cpp  LightSample.h  MaterialSample.cpp  MoreLightSample.cpp  MoreLightSample.h  ParallelLightSample.h  SimpleLightSample.cpp  SimpleLightSample.h
app/src/main/cpp/render/model/: 3DSample.cpp  3DSample.h
app/src/main/cpp/thread/: ThreadPool.h
gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
